--- a/main.css
+++ b/main.css
@@ -2,7 +2,8 @@ body {
 	margin: 0;
 	padding: 0;
 	background: #000;
-	min-height: 100vh;
+	height: 100vh;
+	width: 100vw;
 	display: flex;
 	align-items: center;
 	justify-content: center;
