--- a/main.css
+++ b/main.css
@@ -4,94 +4,161 @@ body {
 	font-family: "Nexa", sans-serif;
 	background: #000;
 }
-.logo-container{
-	overflow: hidden;
-	height: 100vh;
-	width: 100vw;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
+.p-0 {
+  padding: 0px;
 }
-.logo-wrapper {
-	position: relative;
+.overflow-hidden {
+  overflow: hidden;
 }
-
-.logo-wrapper:hover .block:before {
-	width: 20.5vh;
-	height: 20.5vh;
-	top: -0.25vh;
-	left: -0.25vh;
+.justify-center {
+  justify-content: center;
 }
-
-.logo-wrapper:hover .block:after {
-	opacity: 0.65;
-	width: 23vh;
-	height: 23vh;
-	left: -1vh;
+.items-center {
+  align-items: center;
 }
-
-.logo-wrapper:hover .light {
-	opacity: 0;
-	transform: rotate(-60deg);
+.flex-col {
+  flex-direction: column;
 }
-
-.logo-wrapper .block {
-	position: relative;
-	width: 20vh;
-	height: 20vh;
-	background: #000;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
-	background: #060606;
-	transition: width 1s, height 1s;
+.w-full {
+  width: 100%;
+}
+.h-screen {
+  height: 100vh;
+}
+.flex {
+  display: flex;
+}
+.m-0 {
+  margin: 0px;
+}
+.relative {
+  position: relative;
+}
+.w-52 {
+  width: 13rem;
+}
+.h-52 {
+  height: 13rem;
 }
 
-.logo-wrapper .block .text {
-	color: #fff;
-	font-size: 4vh;
+.call-out{
+	margin-top:10px;
+	color: white;
+}
+.onboard-background-animate {
+	background: #ee7752;
+	background-size: 1000% 1000%;
+	-webkit-animation: gradientAnimation 60s linear infinite;
+	animation: gradientAnimation 60s linear infinite;
 }
 
-.logo-wrapper .block:before,
-.logo-wrapper .block:after {
-	content: "";
+@-webkit-keyframes gradientAnimation {
+    0%{background:#ee7752}
+    20%{background:#e73c7e}
+    40%{background:#23a6d5}
+	60%{background:#23d5ab}
+	80%{background:#feff00}
+}
+
+@keyframes gradientAnimation {
+    0%{background:#ee7752}
+    20%{background:#e73c7e}
+    40%{background:#23a6d5}
+	60%{background:#23d5ab}
+	80%{background:#feff00}
+}
+
+.bg-bubbles li {
 	position: absolute;
-	left: -1vh;
-	top: -1vh;
-	width: 17.5vh;
-	height: 17.5vh;
-	z-index: -1;
-	background: linear-gradient(-45deg, #fb0094, #0000ff, #00ff00, #ffff00, #ff0000, #fb0094, #0000ff, #00ff00, #ffff00, #ff0000);
-	background-size: 1500%;
-	animation: glow 120s linear infinite;
-	transition: top 1s, left 1s, width 1s, height 1s, opacity 2s;
+	list-style: none;
+	display: block;
+	width: 40px;
+	height: 40px;
+	/* background: rgba(255, 255, 255, 0.1); */
+	border: 1px solid rgba(255, 255, 255, 0.5);
+	bottom: -250px;
+	-webkit-animation: square 60s infinite;
+	animation: square 60s infinite;
+	transition-timing-function: linear;
 }
-
-.logo-wrapper .block:after {
-	filter: blur(50vh);
-	left: -6vh;
-	width: 35vh;
-	height: 25vh;
-	transform: rotate(45deg);
-	opacity: 0.3;
-	border-radius: 50vh;
+.bg-bubbles li:nth-child(1) {
+	left: 15%;
 }
-
-@keyframes glow {
-	0% {
-		background-position: 100% 100%;
-	}
-	50% {
-		background-position: 0 0;
-	}
-	100% {
-		background-position: 100% 100%;
-	}
+.bg-bubbles li:nth-child(2) {
+	left: 10%;
+	width: 100px;
+	height: 100px;
+	-webkit-animation-delay: 6s;
+	animation-delay: 6s;
+	-webkit-animation-duration: 40s;
+	animation-duration: 40s;
 }
-
-.call-out {
-	color: #fff;
-	margin-top: 10px;
+.bg-bubbles li:nth-child(3) {
+	left: 35%;
+	-webkit-animation-delay: 3s;
+	animation-delay: 3s;
+}
+.bg-bubbles li:nth-child(4) {
+	left: 65%;
+	width: 50px;
+	height: 50px;
+	-webkit-animation-duration: 50s;
+	animation-duration: 50s;
+	background-color: rgba(255, 255, 255, 0.2);
+	-webkit-animation-delay: 15s;
+	animation-delay: 15s;
+}
+.bg-bubbles li:nth-child(5) {
+	left: 90%;
+}
+.bg-bubbles li:nth-child(6) {
+	left: 15%;
+	width: 80px;
+	height: 80px;
+	-webkit-animation-delay: 7s;
+	animation-delay: 7s;
+	background-color: rgba(255, 255, 255, 0.1);
+}
+.bg-bubbles li:nth-child(7) {
+	left: calc(50% - 6.5rem);
+	width: 13rem;
+	height: 13rem;
+	-webkit-animation-delay: 5s;
+	animation-delay: 5s;
+	-webkit-animation-delay: 20s;
+	animation-delay: 20s;
+}
+.bg-bubbles li:nth-child(8) {
+	left: 65%;
+	width: 20px;
+	height: 20px;
+	-webkit-animation-delay: 15s;
+	animation-delay: 15s;
+	-webkit-animation-duration: 40s;
+	animation-duration: 40s;
+}
+.bg-bubbles li:nth-child(9) {
+	left: 25%;
+	width: 15px;
+	height: 15px;
+	-webkit-animation-delay: 2s;
+	animation-delay: 2s;
+	-webkit-animation-duration: 50s;
+	animation-duration: 50s;
+	background-color: rgba(255, 255, 255, 0.3);
+}
+.bg-bubbles li:nth-child(10) {
+	left: 45%;
+	width: 10px;
+	height: 10px;
+	-webkit-animation-delay: 15s;
+	animation-delay: 15s;
+}
+@-webkit-keyframes square {
+  0% { transform: translateY(0); }
+  100% { transform: translateY(-150vh) rotate(600deg); }
+}
+@keyframes square {
+  0% { transform: translateY(0); }
+  100% { transform: translateY(-150vh) rotate(600deg); }
 }
